tests/files/lexer_tests/should_fail/034.cmdr
// Illegal character in variable name (ascii 1)
myvar = 1;